# dbms-term-project

./: .gitignore  PROJECT_REPORT.md  README.md  prompt.md
.github/: copilot-instructions.md
benchmark/: CMakeLists.txt  README.md
benchmark/include/: benchmark_runner.hpp  connection_pool.hpp  metrics.hpp  thread_pool.hpp
benchmark/src/: benchmark_runner.cpp  connection_pool.cpp  main.cpp  metrics.cpp  thread_pool.cpp
solr-apache/scripts/: add_to_website.py  compare_configs.py  env.sh  finalize-benchmark.sh  index-sample-data.sh  run-siege-benchmark.sh  setup-solr.sh  start-services.sh  stop-services.sh  sync_dashboard_data.py  update_dashboard_from_run.py  visualize.py
solr-apache/scripts/benchmark/siege-config/: siegerc
solr-apache/scripts/solr-config/: zoo.cfg
solr-apache/scripts/solr-config/searchcore/: core.properties
solr-apache/scripts/solr-config/searchcore/conf/: managed-schema.xml
solr-apache/webapp/: benchmark.html  index.html  notes.txt  server.py
solr-apache/webapp/css/: style.css
solr-apache/webapp/data/: configs.json  cpp_data.json  siege_data.json
solr-apache/webapp/js/: app.js
